Long avec infini et tests unitaires

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,19 +9,28 @@ add_definitions(-Wall -Wextra)
 project(ReachabilityGame)
 
 set(TARGET_NAME "ReachabilityGame")
+set(LIBRARY_NAME ${TARGET_NAME}-lib)
 
 set(SOURCES
-    src/main.cpp
-
     src/Vertex.cpp
+
+    src/types/Long.cpp
 )
 
-add_executable(${TARGET_NAME} ${SOURCES})
+add_library(${LIBRARY_NAME} ${SOURCES})
 
-target_include_directories(${TARGET_NAME} PUBLIC include)
+target_include_directories(${LIBRARY_NAME} PUBLIC include)
+
+add_executable(${TARGET_NAME} src/main.cpp)
+target_link_libraries(${TARGET_NAME} ${LIBRARY_NAME})
 
 # Documentation
 set(BUILD_DOC FALSE CACHE BOOL "S'il faut construire la documentation ou pas")
 if(BUILD_DOC)
     add_subdirectory(docs)
 endif(BUILD_DOC)
+
+set(BUILD_TESTS FALSE CACHE BOOL "S'il faut construire les tests ou pas")
+if(BUILD_TESTS)
+    add_subdirectory(tests)
+endif(BUILD_TESTS)
