Tests de performance et ajout d'un test pour A*

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,8 @@ set(SOURCES
     src/types/Long.cpp
 
     src/exploration/BestFirstSearch.cpp
+
+    src/generators/RandomGenerator.cpp
 )
 
 add_library(${LIBRARY_NAME} ${SOURCES})
@@ -32,13 +34,25 @@ target_include_directories(${LIBRARY_NAME} PUBLIC include)
 add_executable(${TARGET_NAME} src/main.cpp)
 target_link_libraries(${TARGET_NAME} ${LIBRARY_NAME})
 
+# Générateur aléatoire
+add_executable(random_generator generators/randomGenerator.cpp)
+target_link_libraries(random_generator ${LIBRARY_NAME})
+target_include_directories(random_generator PUBLIC include)
+
 # Documentation
 set(BUILD_DOC FALSE CACHE BOOL "S'il faut construire la documentation ou pas")
 if(BUILD_DOC)
     add_subdirectory(docs)
 endif(BUILD_DOC)
 
+# Tests unitaires
 set(BUILD_TESTS FALSE CACHE BOOL "S'il faut construire les tests ou pas")
 if(BUILD_TESTS)
     add_subdirectory(tests)
 endif(BUILD_TESTS)
+
+# Tests de performance
+set(BUILD_PERFORMANCE FALSE CACHE BOOL "S'il faut construire les tests de performance ou pas")
+if(BUILD_PERFORMANCE)
+    add_subdirectory(performance)
+endif(BUILD_PERFORMANCE)
