Algorithme de Tarjan

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,8 @@ set(SOURCES
 
     src/exploration/BestFirstSearch.cpp
 
+    src/algorithms/Tarjan.cpp
+
     src/generators/RandomGenerator.cpp
     src/generators/RandomTreeLikeGenerator.cpp
 )
