--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,6 +7,8 @@ set(TESTS_SOURCES
     types/DynamicPriorityQueue.cpp
     
     exploration/AStarPositive.cpp
+
+    algorithms/Tarjan.cpp
 )
 
 set(TESTS_NAME ${TARGET_NAME}-tests)
